done more changes

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
     <!-- --------------------------End Main section-------------------------- -->
 
     <!-- -------------------Footer section---------------------------- -->
-    <footer class="container-fluid">
-        <section id="social" class="row">
+    <footer class="container-fluid " style="width: 100%; ">
+        <section id="social" class="row mt-4">
             <div class="col-lg-1"><img src="./assets/social_icons/behance.png" alt=""></div>
             <div class="col-lg-1"><img src="./assets/social_icons/dribble.png" alt=""></div>
             <div class="col-lg-1"><img src="./assets/social_icons/facebook.png" alt=""></div>
@@ -206,7 +206,7 @@
             <div class="col-lg-1"><img src="./assets/social_icons/twitter.png" alt=""></div>
             <div class="col-lg-1"><img src="./assets/social_icons/you_tube.png" alt=""></div>
         </section>
-        <section id="copyright" style="background-color: crimson;">
+        <section id="copyright" style="background-color: grey; padding: 10px;">
             <h4>Voters studio</h4>
             <h5>&copy;2022</h5>
         </section>
